--- a/Breaking a Neural Network.ipynb
+++ b/Breaking a Neural Network.ipynb
@@ -540,7 +540,7 @@
    "source": [
     "### Post-training \n",
     "\n",
-    "The training has the by-product of adjus the feature maps "
+    "The training has the by-product of adjusting all feature maps, whereby even predictions on the Corgi is woefully inaccurate."
    ]
   },
   {
